--- a/lab-servlet-parolee/pom.xml
+++ b/lab-servlet-parolee/pom.xml
@@ -139,6 +139,7 @@
                     </httpConnector>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <stopPort>9000</stopPort>
+                    <stopWait>10</stopWait>
                     <stopKey>STOP</stopKey>
                 </configuration>
                 <executions>
