--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>th.ac.mfu</groupId>
-    <artifactId>lab-webservice</artifactId>
+    <artifactId>lab-oop</artifactId>
     <version>1.0</version>
 
-    <packaging>pom</packaging>
-    <name>lab-servlet</name>
+    <packaging>jar</packaging>
+    <name>lab-oop</name>
+    
 
     <properties>
-        <slf.version>1.7.25</slf.version>
-        <resteasy.version>3.13.0.Final</resteasy.version>
-        <hibernate.version>5.4.20.Final</hibernate.version>
-        <apache.commons.version>3.10</apache.commons.version>
-        <junit.version>4.12</junit.version>
-
         <mvn.compiler.version>3.8.0</mvn.compiler.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<junit.version>4.12</junit.version>
     </properties>
 
-    <modules>
-        <module>lab-servlet-concert</module>
-        <module>lab-servlet-fibonacci</module>
-        <module>lab-servlet-parolee</module>
-    </modules>
 
     <dependencies>
         <!-- JUnit. -->
@@ -31,32 +23,6 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- Logging. -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf.version}</version>
-        </dependency>
-
-        <!-- Apache Commons utilities -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${apache.commons.version}</version>
-        </dependency>
-
-        <!-- Hibernate JPA provider. -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.version}</version>
         </dependency>
     </dependencies>
 
