--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>th.ac.mfu</groupId>
-    <artifactId>lab-oop</artifactId>
+    <artifactId>lab-control</artifactId>
     <version>1.0</version>
 
     <packaging>jar</packaging>
-    <name>lab-oop</name>
+    <name>lab-control</name>
     
 
     <properties>
